--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,9 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <title>Spring Security Example </title>
+    <title>Springdo Login</title>
 </head>
 <body>
+<h1>Springdo Login</h1>
+
 <div th:if="${param.error}">
     Invalid username and password.
 </div>
@@ -12,8 +14,8 @@
     You have been logged out.
 </div>
 <form th:action="@{/login}" method="post">
-    <div><label> User Name : <input type="text" name="username" value="t" /> </label></div>
-    <div><label> Password: <input type="password" name="password"  value="t" /> </label></div>
+    <div><label> Username: <input type="text" name="username" value="t" /> </label></div>
+    <div><label> Password:  <input type="password" name="password"  value="t" /> </label></div>
     <div><input type="submit" value="Sign In"/></div>
 </form>
 </body>
